python/testData/inspections/addFunctionToPackageInFromImport/addFunctionToPackageInFromImport.py
from mypack import <error descr="Cannot find reference 'foo' in 'mypack'"><caret>foo</error>

a = foo()